--- a/CV/index.html
+++ b/CV/index.html
@@ -21,7 +21,9 @@
       <img src="./images/profile_img.jpeg" alt="profile_img" class="profile__img">
       <div class="profile__description">
         <h1 class="profile__title">Mazor Leave</h1>
-        <h2 class="profile__subtitle">Beginner Programmer & Web Developer</h2>
+        <h2 class="profile__subtitle">Junior Full Stack Developer Wannabe</h2>
+        <p class="profile__text">I'm looking forward to work, learn and grow as a Programmer & Web Developer.</p>
+        <p class="profile__text">I would appreciate any opportunity to create a real impact.</p>
       </div>
     </header>
 
@@ -29,12 +31,22 @@
       <hr class="content__separator">
 
       <section class="contact-info">
-        <ul class="contact-info__personal-details-list">
-          <li class="contact-info__home-address"><i class="fas fa-map-marked-alt"></i> TLV, Israel</li>
-          <li class="contact-info__mail-adress"><i class="fas fa-envelope"></i> mazor9920@gmail.com</li>
-          <li class="contact-info__linkedin"><i class="fab fa-linkedin"></i> Mazor Leave</li>
-          <li class="contact-info__phone"><i class="fas fa-phone-square"></i> +972-528481339</li>
-        </ul>
+        <div class="contact-info__col">
+          <h2 class="contact-info__subtitle">check me out:</h2>
+          <ul class="contact-info__personal-details-list">
+            <li class="contact-info__site"><a class="contact-info__link" target="_blank" href="https://mazor9920.github.io/My-Personal-Site/"><i class="fab fa-internet-explorer icon"></i>My Personal Site</a></li>
+            <li class="contact-info__github"><a class="contact-info__link" target="_blank" href="https://github.com/Mazor9920"><i class="fab fa-github-square icon"></i>My Github</a></li>
+            <li class="contact-info__linkedin"><a class="contact-info__link" target="_blank" href="https://www.linkedin.com/in/mazor-leave/"><i class="fab fa-linkedin icon"></i>My LinkedIn</a></li>
+          </ul>
+        </div>
+        <div class="contact-info__col">
+          <h2 class="contact-info__subtitle">contact me:</h2>
+          <ul class="contact-info__personal-details-list">
+            <li class="contact-info__home-address"><i class="fas fa-map-marked-alt icon"></i>TLV, Israel</li>
+            <li class="contact-info__phone"><i class="fas fa-phone-square icon"></i>+972-528481339</li>
+            <li class="contact-info__mail-adress"><i class="fas fa-envelope icon"></i>mazor9920@gmail.com</li>
+          </ul>
+        </div>
       </section>
       <hr class="content__separator">
 
@@ -110,7 +122,7 @@
             <p class="volunteering__years">2020-2021</p>
             <div class="volunteering__description">
               <h3 class="volunteering__framework">My Piece Of The Puzzle Association & Generator Program</h3>
-              <p class="volunteering__responsibilities">a social-business initiator, promoting diversity.</p>
+              <p class="volunteering__responsibilities">A Social-Business Initiator, Promoting Diversity</p>
             </div>
           </li>
         </ul>
@@ -237,7 +249,10 @@
 
       <section class="interests">
         <h2 class="interests__subtitle section__subtitle">Interests</h2>
-        <p class="interests__subject">Technology & Sports</p>
+        <div class="interests__description">
+          <p class="interests__subject">Technology & Sports</p>
+          <a class="interests__link" target="_blank" href="https://mazor9920.github.io/Onboarding_ice_braker/index.html"><i class="fas fa-camera icon"></i>Watch My Life's Highlights</a>
+        </div>
       </section>
       <hr class="content__separator">
 
@@ -246,9 +261,7 @@
         <p class="value__description">
           The majority of my work experience is in customer service, which requires <em>cooperating with Co-Workers and good communication skills</em>.
           <br>
-          I'm sure I will be able to express the rest of my capabilities of <em>autodidactic, quick learning skills and analytical thinking</em>, for the benefit of the company.
-          <br>
-          I would appreciate any opportunity to create a real impact.
+          I'm sure I will be able to express the rest of my capabilities of <em>autodidactic, quick learning skills, and analytical thinking</em>, for the benefit of the company.
         </p>
       </section>
       <hr class="content__separator">
